use ikitommi/immutant-web (#3256)