@@ -5,4 +5,4 @@ fw_depends java leiningen
 cd hello
 lein clean
 lein uberjar
-java -server -Xmx2g -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -jar target/*-standalone.jar &
+java -server -XX:+UseNUMA -XX:+UseParallelGC -XX:+AggressiveOpts -jar target/hello-reitit-standalone.jar
